--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-id-swiper": "^1.6.6",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-typekit": "^1.1.3",
     "smoothscroll-polyfill": "^0.4.3"
   },
   "devDependencies": {
