--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "classnames": "^2.2.6",
     "html-react-parser": "^0.4.6",
     "moment": "^2.22.2",
+    "prop-types": "^15.6.2",
+    "react-device-detect": "^1.6.1",
     "react-helmet": "^5.2.0",
     "react-id-swiper": "^1.6.6",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-typekit": "^1.1.3",
     "smoothscroll-polyfill": "^0.4.3"
   },
   "devDependencies": {
