--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
     "@storybook/addon-actions": "^4.0.0",
+    "@storybook/addon-knobs": "^4.0.0",
     "@storybook/react": "^4.0.0-alpha.3",
     "babel-preset-react-app-babel-7": "^4.0.2-0",
     "node-sass-chokidar": "^1.3.0",
